[package]
name = "dll"
version = "0.1.0"
edition = "2021"

[lib]
name = "mylib"
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
crossterm = "0.16.0"
c-ffi = "0.4.6"
libc = { version = "0.2", default-features = false, optional = true }
smart-ptr = { version = "0.4", optional = true }
hudhook = { version = "0.3.0", features = ["simplelog"] }
imgui = "0.8.2"
simplelog = "0.12.0"

[features]
default = []
memory = ["smart-ptr", "libc"]

[toolchain]
channel = "nightly"

[dependencies.windows]
version = "0.43.0"
features = [
    # "alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
]
